[gd_scene load_steps=14 format=3 uid="uid://bdypi7w73c6kq"]

[ext_resource type="Script" path="res://Scripts/UI Scripts/TemperMeterUI.gd" id="1_1ab38"]
[ext_resource type="Texture2D" uid="uid://40rkni2q8rx7" path="res://Sprites/UI/TemperMeterBackingStart.png" id="1_w743b"]
[ext_resource type="Texture2D" uid="uid://cy08bn1b3gpfe" path="res://Sprites/UI/TemperMeterBackingMiddle.png" id="2_ho0jr"]
[ext_resource type="Texture2D" uid="uid://dwlfwm4vj3h7a" path="res://Sprites/UI/TemperMeterBackingEnd.png" id="3_x72yt"]
[ext_resource type="Texture2D" uid="uid://d2mb763stp37i" path="res://Sprites/UI/TemperMeterSegment.png" id="4_tpqwn"]
[ext_resource type="Texture2D" uid="uid://cpokjticuax3" path="res://Sprites/UI/TemperMeterSegmentInactive.png" id="5_iqph0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnqu5"]
size = Vector2(208, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7vf"]
atlas = ExtResource("4_tpqwn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w50ju"]
atlas = ExtResource("4_tpqwn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oak0r"]
atlas = ExtResource("4_tpqwn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojs8e"]
atlas = ExtResource("4_tpqwn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfna7"]
atlas = ExtResource("4_tpqwn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_e708d"]
animations = [{
"frames": [{
"duration": 12.0,
"texture": SubResource("AtlasTexture_op7vf")
}, {
"duration": 6.0,
"texture": SubResource("AtlasTexture_w50ju")
}, {
"duration": 6.0,
"texture": SubResource("AtlasTexture_oak0r")
}, {
"duration": 6.0,
"texture": SubResource("AtlasTexture_ojs8e")
}],
"loop": true,
"name": &"Flashing",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_iqph0")
}],
"loop": true,
"name": &"Off",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfna7")
}],
"loop": true,
"name": &"On",
"speed": 60.0
}]

[node name="TemperMeterUI" type="Node2D" node_paths=PackedStringArray("meter_start", "meter_middle", "meter_end", "segment_list")]
visibility_layer = 64
z_index = 7
script = ExtResource("1_1ab38")
meter_start = NodePath("MeterStart")
meter_middle = NodePath("MeterMiddle")
meter_end = NodePath("MeterEnd")
player_collision_alpha = 0.5
player_collision_alpha_delta_multiplier = 2.5
cold_segment_color = Color(0.34902, 0.254902, 0.662745, 1)
neutral_segment_color = Color(0.254902, 0.662745, 0.34902, 1)
hot_segment_color = Color(0.811765, 0.478431, 0.188235, 1)
segment_list = [NodePath("Segments/Segment1"), NodePath("Segments/Segment2"), NodePath("Segments/Segment3"), NodePath("Segments/Segment4"), NodePath("Segments/Segment5"), NodePath("Segments/Segment6"), NodePath("Segments/Segment7"), NodePath("Segments/Segment8"), NodePath("Segments/Segment9"), NodePath("Segments/Segment10"), NodePath("Segments/Segment11"), NodePath("Segments/Segment12")]
process_callback = "Physics"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(111, 8)
shape = SubResource("RectangleShape2D_lnqu5")

[node name="MeterStart" type="Sprite2D" parent="."]
texture = ExtResource("1_w743b")
centered = false

[node name="MeterMiddle" type="Sprite2D" parent="."]
position = Vector2(16, 8)
scale = Vector2(12, 1)
texture = ExtResource("2_ho0jr")
offset = Vector2(8, 0)

[node name="MeterEnd" type="Sprite2D" parent="."]
texture = ExtResource("3_x72yt")
centered = false
offset = Vector2(208, 0)

[node name="Segments" type="Node2D" parent="."]

[node name="Segment1" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(24, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 1.0

[node name="Segment2" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(40, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"

[node name="Segment3" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(56, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"

[node name="Segment4" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(72, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.292193

[node name="Segment5" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(88, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.5

[node name="Segment6" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(104, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.5

[node name="Segment7" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(120, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.414207

[node name="Segment8" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(136, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.5

[node name="Segment9" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(152, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.5

[node name="Segment10" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(168, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.292193

[node name="Segment11" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(184, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.5

[node name="Segment12" type="AnimatedSprite2D" parent="Segments"]
visibility_layer = 64
z_index = 8
position = Vector2(200, 8)
sprite_frames = SubResource("SpriteFrames_e708d")
animation = &"Off"
autoplay = "Off"
frame_progress = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_rigid_body_2d_body_exited"]
